<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/menu_payslip"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_payslip" />
        <item
            android:id="@+id/menu_p9"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_p9" />
        <item
            android:id="@+id/menu_leave"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_leave" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/menu_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/menu_petty"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_petty" />
        <item
            android:id="@+id/menu_fleet"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_fleet" />
        <item
            android:id="@+id/menu_purchase"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_purchase" />
        <item
            android:id="@+id/menu_store"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_store" />


    </group>
</menu>